# cauldronPluginRegistry

./: .env.cloudflared  .gitignore  Dockerfile  README.md  docker-compose.cloudflared.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  run.sh
assets/css/: styles.css
assets/js/: scripts.js
cauldronPluginRegistry/: asgi.py  settings.py  urls.py  views.py  wsgi.py
plugins/: admin.py  apps.py  encrypted_fields.py  forms.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
plugins/management/commands/: create_initial_superuser.py  create_tokens_for_existing_users.py  generate_encryption_key.py  import_plugin.py
plugins/migrations/: 0001_initial.py  0002_plugin_status.py  0003_plugin_readme.py  0004_plugin_subcategory.py  0005_plugin_submitted_by_userprofile.py  0006_plugin_diagram_enabled.py  0007_pluginenvvariable.py  0008_plugin_commit_hash.py  0009_add_update_fields.py  0010_runtime_environments_alter_runtime_type.py  0011_repositorysshkey.py  0012_plugin_requires_authentication.py  0013_plugin_tags.py  0014_add_schema_v2_fields.py  0015_plugin_citation_enabled.py  0016_add_schema_v2_complete_fields.py
plugins/templates/plugins/: plugin_bulk_submit.html  plugin_detail.html  plugin_list.html  plugin_submit.html  ssh_key_confirm_delete.html  ssh_key_form.html  ssh_key_list.html  user_plugin_list.html  user_profile.html
plugins/tests/: test_routes.py  test_views.py
templates/: base.html  home.html
templates/registration/: login.html
