[project]
name = "cauldronpluginregistry"
version = "0.1.0"
description = ""
authors = [
    {name = "Toan Phung",email = "toan.phung@proteo.info"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "markdown (>=3.10,<4.0)",
    "social-auth-app-django (>=5.7.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cauldronPluginRegistry.settings"
